--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<table cellspacing="2">
 		<tr>
-			<td><img src="Images/Varnit.png" alt="Varnit's pic" width="50%" height="50%"></td>
+			<td><img src="Images/Varnit.png" alt="Varnit's pic" width="200px" height="200px"></td>
 			<td>
 				<h1>Varnit Singh</h1>
 				<p>I am an <strong><em>App and Web developer</em></strong>, a current scholar at <strong><em>VIT Vellore</em></strong> and a PSG follower.</p>
